--- a/Application/Home/View/Class/index.html
+++ b/Application/Home/View/Class/index.html
@@ -21,6 +21,14 @@
                     </if>
                 </select>
             </div>
+            <div><p></p></div>
+            <div class="am-input-group">
+                <span class="am-input-group-label"><b>状态</b></span>
+                <select id="select-status" class="am-form-field" name="class_status" >
+                    <option value="1">启用</option>
+                    <option value="0">禁用</option>
+                </select>
+            </div>
             <p><input type="submit" class="am-btn am-btn-secondary am-btn-block" name="class_submit" value="新建"></p>
         </fieldset>
     </form>
