解决因cdn.bootcss.com无法访问，导致无法打开年度统计页面的问题

--- a/Application/Home/View/Chart/index.html
+++ b/Application/Home/View/Chart/index.html
@@ -12,8 +12,8 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <!-- 引入 echarts.js -->
-    <!-- <script src="echarts.min.js"></script> -->
-    <script src="//cdn.bootcss.com/echarts/3.2.1/echarts.min.js"></script>
+    <script src="__PUBLIC__/Home/js/echarts.min.js"></script>
+    <!-- <script src="//cdn.bootcss.com/echarts/3.2.1/echarts.min.js"></script> -->
 </head>
 <body style="text-align:center;">
     <!-- 为ECharts准备一个具备大小（宽高）的Dom -->
