--- a/Application/Home/View/Public/header.html
+++ b/Application/Home/View/Public/header.html
@@ -11,10 +11,10 @@
   
   <title>{$Think.config.XXJZ_TITLE}</title>
   
-  <!--<script src="__PUBLIC__/Home/js/pace.min.js"></script>-->
-  <!--<link rel="stylesheet" href="__PUBLIC__/Home/css/pace/pace-theme-center-circle.css"/>-->
-  <script src="//cdn.bootcss.com/pace/1.0.2/pace.min.js"></script>
-  <link href="//cdn.bootcss.com/pace/1.0.2/themes/blue/pace-theme-minimal.css" rel="stylesheet">
+  <script src="__PUBLIC__/Home/js/pace.min.js"></script>
+  <link rel="stylesheet" href="__PUBLIC__/Home/css/pace/pace-theme-center-circle.css"/>
+  <!-- <script src="//cdn.bootcss.com/pace/1.0.2/pace.min.js"></script> -->
+  <!-- <link href="//cdn.bootcss.com/pace/1.0.2/themes/blue/pace-theme-minimal.css" rel="stylesheet"> -->
 
   <!-- Set render engine for 360 browser -->
   <meta name="renderer" content="webkit">
