--- a/Application/Home/View/Chart/index.html
+++ b/Application/Home/View/Chart/index.html
@@ -12,7 +12,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <!-- 引入 echarts.js -->
-    <script src="__PUBLIC__/Home/js/echarts.min.js"></script>
+    <script src="__PUBLIC__/Home/js/echarts.1.min.js"></script>
     <!-- <script src="//cdn.bootcss.com/echarts/3.2.1/echarts.min.js"></script> -->
 </head>
 <body style="text-align:center;">
